--- a/latex/bibliografia.bib
+++ b/latex/bibliografia.bib
@@ -1,96 +1,20 @@
 % Encoding: UTF-8
 
-@inproceedings{Kohavi2007,
-	title={Practical Guide to Controlled Experiments on the Web: Listen to Your Customers not to the HiPPO},
-	author={Ron Kohavi and Roger Longbotham and Dan Sommerfield and Randal Henne},
-	booktitle={Proceedings of the 13th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
-	pages={959-967},
-	year={2007},
-	organization={ACM},
+@book{rice2007,
+  title={Mathematical statistics and data analysis},
+  author={Rice, John A and Rice, John A},
+  volume={371},
+  year={2007},
+  publisher={Thomson/Brooks/Cole Belmont, CA}
 }
-
-@book{Fisher1925,
-	title={Statistical Methods for Research Workers},
-	author={Ronald A. Fisher},
-	year={1925},
-	publisher={Oliver and Boyd},
-	address={Edinburgh},
+@article{student1908,
+  title={The probable error of a mean},
+  author={Student},
+  journal={Biometrika},
+  pages={1--25},
+  year={1908},
+  publisher={JSTOR}
 }
-
-
-@book{Rice2006,
-	title={Mathematical Statistics and Data Analysis},
-	author={John A. Rice},
-	year={2006},
-	edition={3rd},
-	publisher={Cengage Learning},
-}
-
-
-
-@article{Student1908,
-	title={The Probable Error of a Mean},
-	author={Student},
-	journal={Biometrika},
-	volume={6},
-	number={1},
-	pages={1-25},
-	year={1908},
-	publisher={Oxford University Press},
-}
-
-
-
-@article{Kohavi2013,
-	title={Online Controlled Experiments at Large Scale},
-	author={Ron Kohavi and Diane Tang and Ya Xu},
-	journal={Proceedings of the 19th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
-	pages={1168-1176},
-	year={2013},
-	publisher={ACM},
-}
-
-
-
-
-
-
-@article{Sullivan2012,
-	title={Using Effect Size—or Why the P Value Is Not Enough},
-	author={G. Sullivan and R. Feinn},
-	journal={Journal of Graduate Medical Education},
-	volume={4},
-	number={3},
-	pages={279-282},
-	year={2012},
-}
-
-
-
-
-@book{Cohen1988,
-	title={Statistical Power Analysis for the Behavioral Sciences},
-	author={Jacob Cohen},
-	year={1988},
-	publisher={Lawrence Erlbaum Associates},
-	address={Hillsdale, NJ},
-}
-
-
-
-@article{Button2013,
-	title={Power failure: why small sample size undermines the reliability of neuroscience},
-	author={Button, Katherine S and Ioannidis, John PA and Mokrysz, Claire and Nosek, Brian A and Flint, Jonathan and Robinson, Emma S and Munafò, Marcus R},
-	journal={Nature Reviews Neuroscience},
-	volume={14},
-	number={5},
-	pages={365-376},
-	year={2013},
-	publisher={Nature Publishing Group},
-}
-
-
-
 @article{Benjamini1995,
 	title={Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing},
 	author={Yoav Benjamini and Yosef Hochberg},
@@ -99,10 +23,6 @@
 	pages={289-300},
 	year={1995},
 }
-
-
-
-
 @article{Holm1979,
 	title={A Simple Sequentially Rejective Multiple Test Procedure},
 	author={Sture Holm},
@@ -113,18 +33,6 @@
 	year={1979},
 	publisher={Wiley},
 }
-
-
-
-@book{Hollander2013,
-	title={Nonparametric Statistical Methods},
-	author={Myles Hollander, Douglas A. Wolfe, Eric Chicken},
-	year={2013},
-	publisher={Wiley},
-}
-
-
-
 @book{Hollander2013,
 	title={Nonparametric Statistical Methods},
 	author={Myles Hollander and Douglas A. Wolfe and Eric Chicken},
@@ -132,491 +40,162 @@
 	edition={3rd},
 	publisher={John Wiley \& Sons},
 }
-
-
-
-@book{Agresti2002,
-	title={Categorical Data Analysis},
-	author={Alan Agresti},
-	year={2002},
-	publisher={Wiley},
-	edition={2nd},
+@book{agresti2012,
+  title={Categorical data analysis},
+  author={Agresti, Alan},
+  volume={792},
+  year={2012},
+  publisher={John Wiley \& Sons}
 }
-
-
-
 @article{Newcombe1998,
-	title={Two-sided confidence intervals for the single proportion: Comparison of seven methods},
-	author={Robert G. Newcombe},
-	journal={Statistics in Medicine},
-	volume={17},
-	number={8},
-	pages={857-872},
-	year={1998},
-	publisher={Wiley},
-}
-
-
-
-
-@book{Hosmer2013,
-	title={Applied Logistic Regression},
-	author={David W. Hosmer, Jr., Stanley Lemeshow, Rodney X. Sturdivant},
-	year={2013},
-	publisher={Wiley},
-	edition={3rd},
-}
-
-
-
-@article{Kohavi2013,
-	title={Online Controlled Experiments at Large Scale},
-	author={Ron Kohavi and Diane Tang and Ya Xu},
-	journal={Proceedings of the 19th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
-	pages={1168-1176},
-	year={2013},
-	publisher={ACM},
-}
-
-
-
-
-
-@article{Pocock1977,
-	title={Group Sequential Methods in the Design and Analysis of Clinical Trials},
-	author={Stuart J. Pocock},
-	journal={Biometrika},
-	volume={64},
-	number={2},
-	pages={191-199},
-	year={1977},
-	publisher={Oxford University Press},
-}
-
-
-
-@article{DeMets1994,
-	title={Interim analysis: The alpha spending function approach},
-	author={DeMets, David L and Lan, K K Gordon},
-	journal={Statistics in Medicine},
-	volume={13},
-	number={13-14},
-	pages={1341--1352},
-	year={1994},
-	publisher={Wiley Online Library}
-}
-
-
-@article{Benjamini1995,
-	title={Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing},
-	author={Yoav Benjamini and Yosef Hochberg},
-	journal={Journal of the Royal Statistical Society: Series B (Methodological)},
-	volume={57},
-	pages={289-300},
-	year={1995},
-}
-
-
-
-@book{Rosenbaum2010,
-	title={Design of Observational Studies},
-	author={Paul R. Rosenbaum},
-	year={2010},
-	publisher={Springer},
-}
-
-
-@book{Box2015,
-	title={Time Series Analysis: Forecasting and Control},
-	author={George E.P. Box and Gwilym M. Jenkins and Gregory C. Reinsel and Greta M. Ljung},
-	year={2015},
-	publisher={Wiley},
-	edition={5th},
-}
-
-
-
-
-@article{Scott2015,
-	title={Multi-Armed Bandit Algorithms for the Optimal Allocation of Resources},
-	author={Steven L. Scott},
-	journal={Journal of Statistical Software},
-	volume={66},
-	number={1},
-	pages={1-22},
-	year={2015},
-}
-
-
-@article{Montgomery2008,
-	title={Temporal randomization and its application to online controlled experiments},
-	author={Alan L. Montgomery, Peter S. Fader, and Sha Yang},
-	journal={Journal of Marketing Research},
-	volume={45},
-	number={1},
-	pages={312-326},
-	year={2008},
-}
-
-
-@article{Nash1951,
-	title={Non-Cooperative Games},
-	author={John F. Nash},
-	journal={The Annals of Mathematics},
-	volume={54},
-	number={2},
-	pages={286-295},
-	year={1951},
-}
-
-@article{Harsanyi1967},
-title={Games with Incomplete Information Played by “Bayesian” Players, I–III Part I. The Basic Model},
-author={John C. Harsanyi},
-journal={Management Science},
-volume={14},
-number={3},
-pages={159-182},
-year={1967},
-}
-
-
-@article{Aumann1974},
-title={Subjectivity and Correlation in Randomized Strategies},
-author={Robert J. Aumann},
-journal={Journal of Mathematical Economics},
-volume={1},
-number={1},
-pages={67-96},
-year={1974},
-}
-
-
-@article{Aumann1987},
-title={Correlated Equilibrium as an Expression of Bayesian Rationality},
-author={Robert J. Aumann},
-journal={Econometrica},
-volume={55},
-number={1},
-pages={1-18},
-year={1987},
-}
-
-
-@book{Fudenberg1991},
-title={Game Theory},
-author={Drew Fudenberg and Jean Tirole},
-year={1991},
-publisher={MIT Press},
-}
-
-
-
-@article{Lai1985},
-title={Asymptotically Efficient Adaptive Allocation Rules},
-author={Tze Leung Lai and Herbert Robbins},
-journal={Advances in Applied Mathematics},
-volume={6},
-pages={4-22},
-year={1985},
-}
-
-
-
-@book{Berger1985,
-	title={Statistical Decision Theory and Bayesian Analysis},
-	author={James O. Berger},
-	year={1985},
-	publisher={Springer},
-}
-
-
-@article{Wald1950},
-title={Statistical Decision Functions},
-author={Abraham Wald},
-journal={The Annals of Mathematical Statistics},
-year={1950},
-volume={21},
-number={1},
-pages={1-21},
-}
-
-
-@book{Lehmann1998},
-title={Theory of Point Estimation},
-author={Erich L. Lehmann and George Casella},
-year={1998},
-publisher={Springer},
-}
-
-
-@book{Miettinen1999},
-title={Nonlinear Multiobjective Optimization},
-author={Kaisa Miettinen},
-year={1999},
-publisher={Springer},
-}
-
-
-@book{Wald1947,
-	title={Sequential Analysis},
-	author={Abraham Wald},
-	publisher={Wiley},
-	year={1947},
-}
-
-
-
-
-
-
-
-
-
-
-
-@article{Wald1945,
-  title={Sequential Tests of Statistical Hypotheses},
-  author={Abraham Wald},
-  journal={The Annals of Mathematical Statistics},
-  volume={16},
-  pages={117-186},
-  year={1945},
-}
-
-@article{Armitage1954},
-  title={Sequential Analysis with More than Two Alternatives},
-  author={P. Armitage},
-  journal={Journal of the Royal Statistical Society: Series B},
-  volume={16},
-  pages={1-26},
-  year={1954},
-}
-
-@article{Girshick1946},
-  title={Applications of the Theory of Sequential Analysis: Part I},
-  author={M. A. Girshick and A. Wald},
-  journal={The Annals of Mathematical Statistics},
+  title={Two-sided confidence intervals for the single proportion: comparison of seven methods},
+  author={Newcombe, Robert G},
+  journal={Statistics in medicine},
   volume={17},
-  pages={472-480},
-  year={1946},
+  number={8},
+  pages={857--872},
+  year={1998},
+  publisher={Wiley Online Library}
 }
-
-
+@inproceedings{Kohavi2013,
+  title={Online controlled experiments at large scale},
+  author={Kohavi, Ron and Deng, Alex and Frasca, Brian and Walker, Toby and Xu, Ya and Pohlmann, Nils},
+  booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={1168--1176},
+  year={2013}
+}
+@book{cohen2013,
+  title={Statistical power analysis for the behavioral sciences},
+  author={Cohen, Jacob},
+  year={2013},
+  publisher={routledge}
+}
+@article{sullivan2012,
+  title={Using effect size—or why the P value is not enough},
+  author={Sullivan, Gail M and Feinn, Richard},
+  journal={Journal of graduate medical education},
+  volume={4},
+  number={3},
+  pages={279--282},
+  year={2012},
+  publisher={The Accreditation Council for Graduate Medical Education Suite 2000, 515~…}
+}
 @article{Pocock1977,
-  title={Group Sequential Methods in the Design and Analysis of Clinical Trials},
-  author={Stuart J. Pocock},
+  title={Group sequential methods in the design and analysis of clinical trials},
+  author={Pocock, Stuart J},
   journal={Biometrika},
   volume={64},
   number={2},
-  pages={191-199},
+  pages={191--199},
   year={1977},
-  publisher={Oxford University Press},
+  publisher={Oxford University Press}
 }
-
 @article{DeMets1994,
-  title={Some Practical Aspects of Group Sequential Analysis},
-  author={David L. DeMets and Kathryn Anbar},
-  journal={Drug Information Journal},
-  volume={28},
-  number={4},
-  pages={769-785},
+  title={Interim analysis: the alpha spending function approach},
+  author={Demets, David L and Lan, KK Gordon},
+  journal={Statistics in medicine},
+  volume={13},
+  number={13-14},
+  pages={1341--1352},
   year={1994},
+  publisher={Wiley Online Library}
 }
-
-
-
-@article{Holm1979,
-  title={A Simple Sequentially Rejective Multiple Test Procedure},
-  author={Sture Holm},
-  journal={Scandinavian Journal of Statistics},
-  volume={6},
-  number={2},
-  pages={65-70},
-  year={1979},
-  publisher={Wiley},
-}
-
 @book{Rosenbaum2010,
-  title={Design of Observational Studies},
-  author={Paul R. Rosenbaum},
+  title={Design of observational studies},
+  author={Rosenbaum, Paul R and Rosenbaum, P and Briskman},
+  volume={10},
   year={2010},
-  publisher={Springer},
+  publisher={Springer}
 }
-
-
-
-@article{Pocock1977,
-	title={Group Sequential Methods in the Design and Analysis of Clinical Trials},
-	author={Stuart J. Pocock},
-	journal={Biometrika},
-	volume={64},
-	number={2},
-	pages={191-199},
-	year={1977},
-	publisher={Oxford University Press},
+@book{Box2015,
+  title={Time series analysis: forecasting and control},
+  author={Box, George EP and Jenkins, Gwilym M and Reinsel, Gregory C and Ljung, Greta M},
+  year={2015},
+  publisher={John Wiley \& Sons}
 }
-
-
-
-@article{Benjamini1995,
-  title={Controlling the False Discovery Rate: A Practical and Powerful Approach to Multiple Testing},
-  author={Yoav Benjamini and Yosef Hochberg},
-  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
-  volume={57},
-  pages={289-300},
-  year={1995},
+@inproceedings{ju2019sequential,
+  title={A sequential test for selecting the better variant: Online a/b testing, adaptive allocation, and continuous monitoring},
+  author={Ju, Nianqiao and Hu, Diane and Henderson, Adam and Hong, Liangjie},
+  booktitle={Proceedings of the Twelfth ACM International Conference on Web Search and Data Mining},
+  pages={492--500},
+  year={2019}
 }
-
-@article{Holm1979,
-  title={A Simple Sequentially Rejective Multiple Test Procedure},
-  author={Sture Holm},
-  journal={Scandinavian Journal of Statistics},
+@article{nash1950non,
+  title={Non-cooperative games},
+  author={Nash, John F and others},
+  year={1950},
+  publisher={Princeton University Princeton}
+}
+@article{Harsanyi1967,
+  title={Games with incomplete information played by “Bayesian” players, I--III Part I. The basic model},
+  author={Harsanyi, John C},
+  journal={Management science},
+  volume={14},
+  number={3},
+  pages={159--182},
+  year={1967},
+  publisher={INFORMS}
+}
+@article{Aumann1974,
+  title={Subjectivity and correlation in randomized strategies},
+  author={Aumann, Robert J},
+  journal={Journal of mathematical Economics},
+  volume={1},
+  number={1},
+  pages={67--96},
+  year={1974},
+  publisher={Elsevier}
+}
+@article{Aumann1987,
+  title={Correlated equilibrium as an expression of Bayesian rationality},
+  author={Aumann, Robert J},
+  journal={Econometrica: Journal of the Econometric Society},
+  pages={1--18},
+  year={1987},
+  publisher={JSTOR}
+}
+@article{Lai1985,
+  title={Asymptotically efficient adaptive allocation rules},
+  author={Lai, Tze Leung and Robbins, Herbert},
+  journal={Advances in applied mathematics},
   volume={6},
-  number={2},
-  pages={65-70},
-  year={1979},
-  publisher={Wiley},
+  number={1},
+  pages={4--22},
+  year={1985},
+  publisher={Academic Press}
 }
-
-
-
-@book{Armitage1969,
-  title={Statistical Methods in Medical Research},
-  author={Peter Armitage},
-  year={1969},
-  publisher={Blackwell Scientific Publications},
-}
-
-
-
-@article{Gelman2014,
-  title={Beyond Power Calculations: Assessing Type S (Sign) and Type M (Magnitude) Errors},
-  author={Andrew Gelman and John Carlin},
-  journal={Perspectives on Psychological Science},
-  volume={9},
-  number={6},
-  pages={641-651},
-  year={2014},
-}
-
-
-
-@article{Deng2013,
-  title={Improving the Sensitivity of Online Controlled Experiments by Utilizing Pre-Experiment Data},
-  author={Alex Deng and Ping Xu and Shouyuan Chen and Marek Olszewski and Tom Diethe and Sasa Petrovic},
-  journal={Proceedings of the 6th ACM International Conference on Web Search and Data Mining (WSDM)},
-  pages={123-132},
+@book{Berger1985,
+  title={Statistical decision theory and Bayesian analysis},
+  author={Berger, James O},
   year={2013},
-  publisher={ACM},
+  publisher={Springer Science \& Business Media}
 }
-
-@book{Box1951,
-  title={Statistics for Experimenters: Design, Innovation, and Discovery},
-  author={George E. P. Box and William G. Hunter and J. Stuart Hunter},
-  year={1951},
-  publisher={Wiley},
+@article{wald1949statistical,
+  title={Statistical decision functions},
+  author={Wald, Abraham},
+  journal={The Annals of Mathematical Statistics},
+  pages={165--205},
+  year={1949},
+  publisher={JSTOR}
 }
-
-@book{Armitage1969,
-  title={Statistical Methods in Medical Research},
-  author={Peter Armitage},
-  year={1969},
-  publisher={Blackwell Scientific Publications},
+@book{lehmann2006theory,
+  title={Theory of point estimation},
+  author={Lehmann, Erich L and Casella, George},
+  year={2006},
+  publisher={Springer Science \& Business Media}
 }
-
-
-@inproceedings{Deng2014,
-  title={Trustworthy Analysis of Online A/B Tests: Pitfalls, Challenges, and Solutions},
-  author={Alex Deng and Jiajun Lu and Stefan Saito and Yang Yuan and Alex Deng},
-  booktitl
-
-
-
-@InCollection{Von_Stengel_2002,
-  author    = {Bernhard Von Stengel},
-  title     = {Chapter 45 Computing equilibria for two-person games},
-  booktitle = {Handbook of Game Theory with Economic Applications},
-  publisher = {Elsevier},
-  year      = {2002},
-  pages     = {1723--1759},
-  doi       = {10.1016/s1574-0005(02)03008-4},
+@book{Miettinen1999,
+  title={Nonlinear multiobjective optimization},
+  author={Miettinen, Kaisa},
+  volume={12},
+  year={1999},
+  publisher={Springer Science \& Business Media}
 }
-@article{platkowski2012wstkep,
-  title={Wst{\k{e}}p do teorii gier},
-  author={P{\l}atkowski, Tadeusz},
-  journal={Uniwersytet Warszawski},
-  year={2012}
-}
-@book{prisner2014game,
-  title={Game theory through examples},
-  author={Prisner, Erich},
-  volume={46},
-  year={2014},
-  publisher={American Mathematical Soc.}
-}
-@inproceedings{heidrich2011non,
-  title={Non-linearly increasing resampling in racing algorithms},
-  author={Heidrich-Meisner, Verena and Igel, Christian},
-  booktitle={European Symposium on Artificial Neural Networks},
-  pages={465--470},
-  year={2011},
-  organization={Evere, Belgium: d-side publications}
-}
-@conference{Maron-1993-15969,
-author = {O. Maron and Andrew Moore},
-title = {Hoeffding Races: Accelerating Model Selection Search for Classification and Function Approximation},
-booktitle = {Proceedings of \emph{(}NeurIPS\emph{)} Neural Information Processing Systems},
-year = {1993},
-month = {November},
-pages = {59 - 66},
-publisher = {Morgan Kaufmann},
-}
-@InProceedings{Mnih_2008,
-  author    = {Volodymyr Mnih and Csaba Szepesv{\'{a}}ri and Jean-Yves Audibert},
-  title     = {Empirical Bernstein stopping},
-  booktitle = {Proceedings of the 25th international conference on Machine learning - {ICML} {\textquotesingle}08},
-  year      = {2008},
-  publisher = {{ACM} Press},
-  doi       = {10.1145/1390156.1390241},
-}
-@inproceedings{cauwet2018surprising,
-  title={Surprising strategies obtained by stochastic optimization in partially observable games},
-  author={Cauwet, Marie-Liesse and Teytaud, Olivier},
-  booktitle={2018 IEEE Congress on Evolutionary Computation (CEC)},
-  pages={1--8},
-  year={2018},
-  organization={IEEE}
-}
-@article{droste1998rigorous,
-  title={A rigorous complexity analysis of the (1+1) evolutionary algorithm for separable functions with Boolean inputs},
-  author={Droste, Stefan and Jansen, Thomas and Wegener, Ingo},
-  journal={Evolutionary Computation},
-  volume={6},
-  number={2},
-  pages={185--196},
-  year={1998},
-  publisher={MIT Press}
-}
-@Article{Collet_2000,
-  author    = {Pierre Collet and Evelyne Lutton and Fr{\'{e}}d{\'{e}}ric Raynal and Marc Schoenauer},
-  title     = {Polar {IFS}+{P}arisian {G}enetic {P}rogramming={E}fficient {IFS} {I}nverse {P}roblem {S}olving},
-  journal   = {Genetic Programming and Evolvable Machines},
-  year      = {2000},
-  volume    = {1},
-  number    = {4},
-  pages     = {339--361},
-  doi       = {10.1023/a:1010065123132},
-  publisher = {Springer Science and Business Media {LLC}},
-}
-
-@Article{Figielska2006,
-  author        = {Figielska, Ewa},
-  title         = {Algorytmy ewolucyjne i ich zastosowania},
-  journal       = {Zeszyty Naukowe Warszawskiej Wy{\.z}szej Szko{\l}y Informatyki},
-  year          = {2006},
-  number        = {1},
-  pages         = {81--92},
-  __markedentry = {[olek:6]},
+@book{wald2004sequential,
+  title={Sequential analysis},
+  author={Wald, Abraham},
+  year={2004},
+  publisher={Courier Corporation}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
